--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <a href="#">Privacy Policy</a>
     </p>
     <p>&copy; 2025 <strong>Animal Kingdom</strong>. All Rights Reserved. | Developed & Designed by 
-      <strong><a href="https://github.com/RicardoNicolau" target="_blank">Ricardo Nicolau</a></strong>
+      <strong><a href="https://github.com/DevByRico" target="_blank">DevByRico</a></strong>
     </p>
   </footer>
 
